crates/oxc_react_compiler/tests/snapshots/foreach-result-primitive-new-mutation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/foreach-result-primitive-new-mutation.jsx
---
import { c as _c } from "react/compiler-runtime";
// @enableNewMutationAliasingModel
function Component() {
	const $ = _c(1);
	const value = [1].forEach(_temp);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = { value };
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function _temp(x) {
	return x;
}
