crates/oxc_react_compiler/tests/snapshots/frozen-after-alias.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/frozen-after-alias.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const a = t0;
	const b = a;
	useFreeze(a);
	foo(b);
	return b;
}
function useFreeze() {}
function foo(x) {}
