crates/oxc_react_compiler/tests/snapshots/function-declaration-reassign.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/function-declaration-reassign.js
---
import { c as _c } from "react/compiler-runtime";
function component() {
	const $ = _c(1);
	let x;
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = {};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	x = t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: [],
	isComponent: false
};
