crates/oxc_react_compiler/tests/snapshots/function-expr-directive.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/function-expr-directive.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	"use strict";
	const $ = _c(3);
	const [count, setCount] = React.useState(0);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = function update() {
			"worklet";
			setCount(_temp);
		};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const update = t0;
	let t1;
	if ($[1] !== count) {
		t1 = <button onClick={update}>{count}</button>;
		$[1] = count;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
function _temp(count_0) {
	return count_0 + 1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [],
	isComponent: true
};
