crates/oxc_react_compiler/tests/snapshots/function-expression-maybe-mutates-hook-return-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/function-expression-maybe-mutates-hook-return-value.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	const id = useSelectedEntitytId();
	let t0;
	if ($[0] !== id) {
		const onLoad = () => {
			log(id);
		};
		t0 = <Foo onLoad={onLoad} />;
		$[0] = id;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
