crates/oxc_react_compiler/tests/snapshots/function-expression-prototype-call.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/function-expression-prototype-call.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props) {
		const f = function() {
			return <div>{props.name}</div>;
		};
		t0 = f.call();
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ name: "Jason" }]
};
